--- a/src/signature.html
+++ b/src/signature.html
@@ -21,7 +21,7 @@
 			<td>
 				<span style="font-family: 'Century Gothic'; font-size: 11pt; line-height: 1em;">
 					<!-- Post och årtal -->
-					$job
+					$job $year
 				</span>
 			</td>
 		</tr>
