Remove server part, fix up release and add copy button

--- a/index.html
+++ b/index.html
@@ -40,16 +40,14 @@
 	</tr>
 	<tr>
 		<td>
-			<button type="button" onclick="writeSignature();">Tryck här</button>
+			<button type="button" onclick="writeSignature();">Skapa signatur</button>
 		</td>
 	</tr>
 </table>
 
 <h2>Förhandsvisning</h2>
 <div id="preview"></div>
-
-<h2>HTML</h2>
-<div><pre id="code"></pre></div>
+<button type="button" onclick="copySignature();">Kopiera signatur</button>
 
 </body>
 </html> 
