Fix text to be more descriptive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 
 <h1>Signaturgenerator</h1>
-<p>Sektionen använder sig av signaturer i mail (mer beskrivning av hur...).</p>
+<p>Sektionen använder sig av mejlsignaturer. För att skapa en signatur: fyll i fälten här, klicka på "Skapa signatur" och sedan på "Kopiera signatur". Denna kan sedan kopieras in i Gmail under “Settings” -> “General” -> “Signature”. Du behöver sätta en signatur per mailadress du mailar ifrån.</p>
+
 
 <h2>Uppgifter</h2>
 <table>
@@ -25,7 +26,7 @@
 	</tr>
 	<tr>
 		<td>
-			<input id="year">År (t.ex. 1943)</input>
+			<input id="year">År (t.ex. 2025)</input>
 		</td>
 	</tr>
 	<tr>
